--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "portfolio",
+  "description": "My developer's portfolio showcasing my skills, projects, and expertise in a visually appealing manner",
+  "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
   "version": "0.2.0",
   "private": true,
   "engines": {
@@ -11,18 +13,21 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
+    "start": "node .output/server/index.mjs",
     "clean": "nuxt clean"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@types/node": "^18.16.19",
+    "@types/node": "^20.4.2",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
     "nuxt": "^3.6.2",
     "nuxt-gtag": "^0.5.7",
-    "nuxt-icons": "^3.2.1"
+    "nuxt-icons": "^3.2.1",
+    "nuxt-schema-org": "^2.2.0"
   },
   "dependencies": {
     "yaml": "^2.3.1"
