--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@types/node": "^20.4.2",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
-    "nuxt": "^3.6.2",
+    "nuxt": "^3.6.3",
     "nuxt-gtag": "^0.5.7",
     "nuxt-icons": "^3.2.1",
     "nuxt-schema-org": "^2.2.0"
   },
   "dependencies": {
+    "@splidejs/vue-splide": "^0.6.12",
     "yaml": "^2.3.1"
   }
 }
