--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^20.4.2",
+    "@types/nodemailer": "^6.4.8",
     "@vueuse/core": "^10.2.1",
     "@vueuse/nuxt": "^10.2.1",
-    "nuxt": "^3.6.3",
+    "nuxt": "^3.6.5",
     "nuxt-gtag": "^0.5.7",
     "nuxt-icons": "^3.2.1",
     "nuxt-schema-org": "^2.2.0"
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
+    "nodemailer": "^6.9.4",
+    "vee-validate": "^4.10.7",
     "yaml": "^2.3.1"
   }
 }
