--- a/projects.yml
+++ b/projects.yml
@@ -1,7 +1,7 @@
 ---
 - name: Psy
   repo: shba007/psy-app
-  createdAt: "2021-07-20T18:30:00.000Z"
+  category: "web-app"
   technologies:
     languages:
       - Typescript
@@ -9,6 +9,8 @@
     frameworks:
       - Nuxt
       - FastAPI
+      - Tailwind CSS
+  createdAt: "2021-07-20T18:30:00.000Z"
   appURL: "https://psy.shirsendu-bairagi.dev"
   videoURL: "https://youtu.be/Tu60B-gheNM"
 # - name: FlowMate
@@ -98,21 +100,25 @@
 #   videoURL: ''
 - name: Podcast
   repo: shba007/ui-react-podcast
-  createdAt: "2023-06-27T18:30:00.000Z"
+  category: "ui"
   technologies:
     languages:
       - Typescript
     frameworks:
       - React
+      - Tailwind CSS
+  createdAt: "2023-06-27T18:30:00.000Z"
   appURL: "https://shba007.github.io/ui-react-podcast/"
   videoURL: null
 - name: Magma
   repo: shba007/ui-react-magma
-  createdAt: "2023-07-16T18:30:00.000Z"
+  category: "ui"
   technologies:
     languages:
       - Typescript
     frameworks:
       - React
+      - Tailwind CSS
+  createdAt: "2023-07-16T18:30:00.000Z"
   appURL: "https://shba007.github.io/ui-react-magma/"
   videoURL: null
