--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -55,5 +55,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: 22
           overwrite: true
-          source: '.output, projects.yml'
+          source: '.output, projects.yml, hackathons.yml'
           target: '~/portfolio'
