--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^0.7.1",
     "@nuxtjs/color-mode": "^3.3.0",
+    "@nuxtjs/supabase": "^0.3.8",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tresjs/nuxt": "^1.0.1",
     "@types/node": "^20.4.5",
