--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs",
+    "start": "npx serve .output/public",
     "clean": "nuxt clean"
   },
   "devDependencies": {
