--- a/hackathons.yml
+++ b/hackathons.yml
@@ -3,9 +3,9 @@
   link: "https://bay-area-hacks-1.devpost.com"
   project: "Compeer"
   rank: 5
-  started_at: "2023-06-18T00:00:00.000Z"
+  started_at: "2023-06-18T00:00:00Z"
 - name: "GNEC Hackathon 2023"
   link: "https://gnec-hackathon-2023.devpost.com"
   project: "Biosense"
-  rank: null
-  started_at: null
+  rank: 9
+  started_at: "2023-07-23T16:00:00Z"
