--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "npx serve .output/public",
-    "clean": "nuxt clean"
+    "start": "node .output/server/index.mjs",
+    "clean": "nuxt cleanup"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^0.7.1",
     "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/supabase": "^0.3.8",
+    "@nuxtjs/supabase": "^1.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@tresjs/nuxt": "^1.1.3",
-    "@types/node": "^20.4.5",
-    "@types/nodemailer": "^6.4.9",
-    "@types/three": "^0.155.0",
-    "@vueuse/core": "^10.3.0",
-    "@vueuse/nuxt": "^10.3.0",
-    "nuxt": "^3.6.5",
-    "nuxt-gtag": "^0.5.7",
+    "@tresjs/nuxt": "^1.1.7",
+    "@types/node": "^20.6.3",
+    "@types/nodemailer": "^6.4.10",
+    "@types/three": "^0.156.0",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/nuxt": "^10.4.1",
+    "nuxt": "^3.7.3",
+    "nuxt-gtag": "^1.1.1",
     "nuxt-icons": "^3.2.1",
-    "nuxt-schema-org": "^2.2.0"
+    "nuxt-schema-org": "^3.0.0"
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
-    "nodemailer": "^6.9.4",
-    "three": "^0.155.0",
-    "vee-validate": "^4.11.1",
-    "yaml": "^2.3.1"
+    "nodemailer": "^6.9.5",
+    "three": "^0.156.1",
+    "vee-validate": "^4.11.6",
+    "yaml": "^2.3.2"
   }
 }
