fix: ci/cd pipline, supbase /login error

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "^18.16.0"
   },
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -17,27 +17,26 @@
     "clean": "nuxt cleanup"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@nuxt/devtools": "latest",
-    "@nuxt/image": "^0.7.1",
+    "@nuxt/image": "^1.0.0-rc.2",
     "@nuxtjs/color-mode": "^3.3.0",
-    "@nuxtjs/supabase": "^1.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tresjs/nuxt": "^1.1.7",
-    "@types/node": "^20.6.3",
-    "@types/nodemailer": "^6.4.10",
-    "@types/three": "^0.156.0",
+    "@types/node": "^20.7.2",
+    "@types/nodemailer": "^6.4.11",
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.4.1",
-    "nuxt": "^3.7.3",
+    "nuxt": "^3.7.4",
     "nuxt-gtag": "^1.1.1",
     "nuxt-icons": "^3.2.1",
     "nuxt-schema-org": "^3.0.0"
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
+    "@supabase/supabase-js": "^2.37.0",
     "nodemailer": "^6.9.5",
-    "three": "^0.156.1",
-    "vee-validate": "^4.11.6",
+    "vee-validate": "^4.11.7",
     "yaml": "^2.3.2"
   }
 }
