--- a/projects.yml
+++ b/projects.yml
@@ -69,7 +69,7 @@
 #   createdAt: '2022-03-24T18:30:00Z'
 #   appURL: null
 #   videoURL: null
-- name: BioSense
+- name: Biosense
   repo: shba007/biosense-web
   category: "iot"
   technologies:
@@ -139,4 +139,14 @@
       - Tailwind CSS
   createdAt: "2023-07-26T06:57:32Z"
   appURL: "https://ai-guide.onrender.com/"
+  videoURL: null
+- name: Framework Logo
+  repo: shba007/framework-logo
+  category: "npm-package"
+  technologies:
+    languages:
+      - Typescript
+    frameworks:
+  createdAt: "2023-09-11T18:30:00Z"
+  appURL: "https://www.npmjs.com/package/framework-logo/"
   videoURL: null
