--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@changesets/cli": "^2.26.2",
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
-    "@nuxt/test-utils": "^3.8.0",
+    "@nuxt/test-utils": "^3.8.1",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.9.4",
     "@nuxtseo/module": "^2.0.0-beta.40",
@@ -30,11 +30,13 @@
     "@types/nodemailer": "^6.4.13",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
-    "nuxt": "^3.8.0",
+    "nuxt": "^3.8.1",
     "nuxt-gtag": "^1.1.1",
     "nuxt-icons": "^3.2.1",
     "nuxt-vitest": "^0.11.2",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
