feat: redesigned contact section & added new project and hackathon

--- a/hackathons.yml
+++ b/hackathons.yml
@@ -9,3 +9,8 @@
   project: "Biosense"
   title: "Winner"
   startedAt: "2023-07-23T16:00:00Z"
+- name: "Solo Hacks 1.0"
+  url: "https://solo-hacks-1-0.devpost.com"
+  project: "Plant Lens"
+  title: "Top 15"
+  startedAt: "2023-12-18T14:00:00.000Z"
