--- a/projects.yml
+++ b/projects.yml
@@ -83,18 +83,18 @@
   createdAt: "2022-08-02T18:30:00Z"
   appURL: "https://biosense.onrender.com"
   videoURL: "https://youtu.be/Y8hROrtp948"
-- name: Podcast
-  repo: shba007/ui-react-podcast
-  category: "ui"
-  technologies:
-    languages:
-      - Typescript
-    frameworks:
-      - React
-      - Tailwind CSS
-  createdAt: "2023-06-27T18:30:00Z"
-  appURL: "https://shba007.github.io/ui-react-podcast/"
-  videoURL: null
+# - name: Podcast
+#   repo: shba007/ui-react-podcast
+#   category: "ui"
+#   technologies:
+#     languages:
+#       - Typescript
+#     frameworks:
+#       - React
+#       - Tailwind CSS
+#   createdAt: "2023-06-27T18:30:00Z"
+#   appURL: "https://shba007.github.io/ui-react-podcast/"
+#   videoURL: null
 # - name: Compeer
 #   repo: shba007/com-peer
 #   category: "web-app"
