--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "portfolio-shirsendu",
   "description": "My developer's portfolio showcasing my skills, projects, and expertise in a visually appealing manner",
   "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
   "version": "0.6.1",
@@ -24,8 +24,11 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@nuxtseo/module": "^2.0.0-beta.50",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
+    "@vite-pwa/nuxt": "^0.3.5",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.0",
     "nuxt": "^3.8.2",
     "nuxt-gtag": "^1.1.1",
     "nuxt-icons": "^3.2.1",
@@ -36,11 +39,8 @@
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
     "@supabase/supabase-js": "^2.39.0",
-    "@vite-pwa/nuxt": "^0.3.5",
-    "@vueuse/core": "^10.7.0",
-    "@vueuse/nuxt": "^10.7.0",
     "nodemailer": "^6.9.7",
-    "vee-validate": "^4.12.2",
+    "vee-validate": "^4.12.3",
     "yaml": "^2.3.4"
   }
 }
