--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           port: 22
           overwrite: true
           source: '.output, projects.yml, experiences.yml, hackathons.yml, certificates.yml'
-          target: '~/portfolio'
+          target: '~/portfolio-shirsendu'
