--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-shirsendu",
-  "description": "My developer's portfolio showcasing my skills, projects, and expertise in a visually appealing manner",
+  "description": "Shirsendu's devfolio showcasing his projects, experience and contacts in a visually appealing manner",
   "author": "Shirsendu Bairagi <shirsendu2001@gmail.com>",
   "version": "0.6.3",
   "private": true,
@@ -22,13 +22,13 @@
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.1.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/tailwindcss": "^6.10.1",
+    "@nuxtjs/tailwindcss": "^6.10.3",
     "@nuxtseo/module": "^2.0.0-beta.51",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
-    "@vite-pwa/nuxt": "^0.3.6",
-    "@vueuse/core": "^10.7.0",
-    "@vueuse/nuxt": "^10.7.0",
+    "@vite-pwa/nuxt": "^0.4.0",
+    "@vueuse/core": "^10.7.1",
+    "@vueuse/nuxt": "^10.7.1",
     "nuxt": "^3.9.0",
     "nuxt-gtag": "^1.1.2",
     "nuxt-icons": "^3.2.1",
@@ -40,7 +40,7 @@
     "@splidejs/vue-splide": "^0.6.12",
     "@supabase/supabase-js": "^2.39.1",
     "nodemailer": "^6.9.7",
-    "vee-validate": "^4.12.3",
+    "vee-validate": "^4.12.4",
     "yaml": "^2.3.4"
   }
 }
