feat: added monalisa's portfoio

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04.6
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
