--- a/projects.yml
+++ b/projects.yml
@@ -203,15 +203,15 @@
   appURL: "https://monalisa-bairagi.com/"
   videoURL: null
   
-# - name: Aratrik's Portfolio
-#   repo: shba007/portfolio-aratrik
-#   category: "web-app"
-#   technologies:
-#     languages:
-#       - Typescript
-#     frameworks:
-#       - Nuxt
-#       - Tailwind CSS
-#   createdAt: "2023-11-24T18:30:00Z"
-#   appURL: "https://portfolio-aratrik.onrender.com/"
-#   videoURL: null
+- name: Aratrik's Portfolio
+  repo: shba007/portfolio-aratrik
+  category: "web-app"
+  technologies:
+    languages:
+      - Typescript
+    frameworks:
+      - Nuxt
+      - Tailwind CSS
+  createdAt: "2023-11-24T18:30:00Z"
+  appURL: "https://redcatpictures.com/"
+  videoURL: null
