--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.3.0",
+    "@nuxt/test-utils": "^3.11.0",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/tailwindcss": "^6.11.3",
-    "@nuxtseo/module": "^2.0.0-beta.55",
-    "@types/node": "^20.11.17",
+    "@nuxtjs/seo": "^2.0.0-rc.8",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@types/node": "^20.11.19",
     "@types/nodemailer": "^6.4.14",
-    "@vite-pwa/nuxt": "^0.4.0",
+    "@vite-pwa/nuxt": "^0.5.0",
     "@vueuse/core": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
-    "nuxt": "^3.10.1",
-    "nuxt-gtag": "^1.1.2",
+    "nuxt": "^3.10.2",
+    "nuxt-gtag": "^1.2.0",
     "nuxt-icons": "^3.2.1",
-    "nuxt-vitest": "^0.11.5",
-    "vue": "^3.4.18",
+    "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@nuxt/image": "^1.3.0",
     "@splidejs/vue-splide": "^0.6.12",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.39.6",
     "@vue-email/nuxt": "^0.8.13",
     "nodemailer": "^6.9.9",
     "vee-validate": "^4.12.5",
