refactor: changed supabasedb to notiondb

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ NUXT_PRIVATE_ROOT_DIR=
 NUXT_PRIVATE_GMAIL=
 NUXT_PRIVATE_EMAIL_USERNAME=
 NUXT_PRIVATE_EMAIL_PASSWORD=
-SUPABASE_URL=
-SUPABASE_KEY=
+NUXT_PRIVATE_NOTION_KEY=
+NUXT_PRIVATE_NOTION_DB_ID=
