--- a/package.json
+++ b/package.json
@@ -26,23 +26,23 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/seo": "^2.0.0-rc.8",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.24",
     "@types/nodemailer": "^6.4.14",
     "@vite-pwa/nuxt": "^0.5.0",
-    "@vueuse/core": "^10.7.2",
-    "@vueuse/nuxt": "^10.7.2",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
     "nuxt": "^3.10.3",
-    "nuxt-gtag": "^1.2.0",
+    "nuxt-gtag": "^2.0.4",
     "nuxt-icons": "^3.2.1",
-    "vue": "^3.4.19",
-    "vue-router": "^4.2.5"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.14",
     "@splidejs/vue-splide": "^0.6.12",
-    "@supabase/supabase-js": "^2.39.7",
-    "@vue-email/nuxt": "^0.8.15",
-    "nodemailer": "^6.9.9",
+    "@vue-email/nuxt": "^0.8.19",
+    "nodemailer": "^6.9.11",
     "vee-validate": "^4.12.5",
-    "yaml": "^2.3.4"
+    "yaml": "^2.4.0"
   }
 }
