fix: deploy job in gh actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,11 +46,6 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
 
-      - name: Move artifacts
-        run: |
-          mv $GITHUB_WORKSPACE/artifact/* $GITHUB_WORKSPACE/
-          rm -r $GITHUB_WORKSPACE/artifact
-
       - name: Upload artifact to VPS
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -59,5 +54,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: 22
           overwrite: true
-          source: '.output, projects.yml, experiences.yml, hackathons.yml, certificates.yml'
+          rm: true
+          source: 'artifact/*'
           target: '~/portfolio-shirsendu'
